--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-
 body {
+    background-color: #b2e1f8;
+}
+
+.app {
     margin: 10%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
